templates update and package refactor

--- a/templates/generals.page.tmpl
+++ b/templates/generals.page.tmpl
@@ -63,6 +63,34 @@
               attention.custom({
                   title: 'Choose your dates',
                   msg: html,
+                  willOpen: () => {
+                      const elem = document.getElementById("reservation-dates-modal");
+                      const rp = new DateRangePicker(elem, {
+                          format: 'yyyy-mm-dd',
+                          showOnFocus: true,
+                      })
+                  },
+                  didOpen: () => {
+                      document.getElementById("start").removeAttribute("disabled");
+                      document.getElementById("end").removeAttribute("disabled");
+                  },
+                  preConfirm: () => [
+                      document.getElementById('start').value,
+                      document.getElementById('end').value
+                  ],
+                  callback: (res) => {
+                      const form = document.getElementById("check-availability-form");
+                      const formData = new FormData(form)
+                      formData.append("csrf_token", "{{.CSRFToken}}")
+                      fetch('/search-availability-json', {
+                          method: 'POST',
+                          body: formData
+                      })
+                          .then(resp => resp.json())
+                          .then(data => {
+                              console.log({data})
+                          })
+                  }
               });
           })
       }
