--- a/templates/majors.page.tmpl
+++ b/templates/majors.page.tmpl
@@ -32,39 +32,17 @@
 
     <div class="row">
       <div class="col text-center">
-        <a id="check-availability-button" href="#!" class="btn btn-success">Check Availability</a>
+        <button
+                onclick="showAvailabilityModal(2, {{.CSRFToken}});"
+                class="btn btn-success"
+        >
+          Check Availability
+        </button>
       </div>
     </div>
   </div>
 {{end}}
 
 {{define "js"}}
-  <script>
-      const btn = document.getElementById("check-availability-button")
-      if (!!btn) {
-          btn.addEventListener("click", () => {
-              let html = `
-        <form id="check-availability-form" action="" method="post" novalidate class="needs-validation">
-            <div class="form-row">
-                <div class="col">
-                    <div class="form-row" id="reservation-dates-modal">
-                        <div class="col">
-                            <input disabled required class="form-control" type="text" name="start" id="start" placeholder="Arrival">
-                        </div>
-                        <div class="col">
-                            <input disabled required class="form-control" type="text" name="end" id="end" placeholder="Departure">
-                        </div>
-
-                    </div>
-                </div>
-            </div>
-        </form>
-        `;
-              attention.custom({
-                  title: 'Choose your dates',
-                  msg: html,
-              });
-          })
-      }
-  </script>
+  <script src="/static/js/room-booking-modal.js"></script>
 {{end}}
