--- a/templates/make-reservation.page.tmpl
+++ b/templates/make-reservation.page.tmpl
@@ -4,10 +4,12 @@
   <div class="container">
     <div class="row">
       <div class="col">
-        <h1 class="mt-3">Make Reservation</h1>
-          <h4>Reservation Details:</h4>
+          {{$res := index .Data "reservation"}}
+        <h1 class="mt-3">Make Reservation for {{$res.Room.RoomName}}</h1>
+        <h4>Reservation Details:</h4>
 
-        {{$res := index .Data "reservation"}}
+        Arrival: {{index .StringMap "start_date"}}<br>
+        Departure: {{index .StringMap "end_date"}}<br>
 
         <form
                 method="post"
@@ -15,6 +17,10 @@
                 novalidate
         >
           <input type="hidden" name="csrf_token" value="{{.CSRFToken}}">
+
+          <input type="hidden" name="start_date" value="{{index .StringMap "start_date"}}">
+          <input type="hidden" name="end_date" value="{{index .StringMap "end_date"}}">
+          <input type="hidden" name="room_id" value="{{$res.RoomID}}">
 
           <div class="form-group mt-3">
             <label for="first_name">First Name:</label>
@@ -66,42 +72,42 @@
                    name='phone' value="{{$res.Phone}}" required>
           </div>
 
-          <div class="form-group">
-            <label for="start_date">Start Date:</label>
-              {{with .Form.Errors.Get "start_date"}}
-                <label for="start_date" class="text-danger">*{{.}}</label>
-              {{end}}
-            <input class="form-control {{with .Form.Errors.Get "start_date"}}
-                   is-invalid
-                   {{end}}"
-                   id="start_date"
-                   type="date"
-                   autocomplete="off"
-                   name='start_date' value="{{$res.StartDate}}" required>
-          </div>
-          <div class="form-group">
-            <label for="end_date">End Date:</label>
-              {{with .Form.Errors.Get "end_date"}}
-                <label for="end_date" class="text-danger">*{{.}}</label>
-              {{end}}
-            <input class="form-control {{with .Form.Errors.Get "end_date"}}
-                   is-invalid
-                   {{end}}" id="end_date"
-                   type="date"
-                   autocomplete="off"
-                   name='end_date' value="{{$res.EndDate}}" required>
-          </div>
-          <div class="form-group">
-            <label for="room_id">Room ID:</label>
-              {{with .Form.Errors.Get "room_id"}}
-                <label for="room_id" class="text-danger">*{{.}}</label>
-              {{end}}
-            <input class="form-control {{with .Form.Errors.Get "room_id"}}
-                   is-invalid
-                   {{end}}" id="room_id"
-                   autocomplete="off"
-                   name='room_id' value="{{$res.RoomID}}" required>
-          </div>
+            {{/*          <div class="form-group">*/}}
+            {{/*            <label for="start_date">Start Date:</label>*/}}
+            {{/*              {{with .Form.Errors.Get "start_date"}}*/}}
+            {{/*                <label for="start_date" class="text-danger">*{{.}}</label>*/}}
+            {{/*              {{end}}*/}}
+            {{/*            <input class="form-control {{with .Form.Errors.Get "start_date"}}*/}}
+            {{/*                   is-invalid*/}}
+            {{/*                   {{end}}"*/}}
+            {{/*                   id="start_date"*/}}
+            {{/*                   type="date"*/}}
+            {{/*                   autocomplete="off"*/}}
+            {{/*                   name='start_date' value="{{$res.StartDate}}" required>*/}}
+            {{/*          </div>*/}}
+            {{/*          <div class="form-group">*/}}
+            {{/*            <label for="end_date">End Date:</label>*/}}
+            {{/*              {{with .Form.Errors.Get "end_date"}}*/}}
+            {{/*                <label for="end_date" class="text-danger">*{{.}}</label>*/}}
+            {{/*              {{end}}*/}}
+            {{/*            <input class="form-control {{with .Form.Errors.Get "end_date"}}*/}}
+            {{/*                   is-invalid*/}}
+            {{/*                   {{end}}" id="end_date"*/}}
+            {{/*                   type="date"*/}}
+            {{/*                   autocomplete="off"*/}}
+            {{/*                   name='end_date' value="{{$res.EndDate}}" required>*/}}
+            {{/*          </div>*/}}
+            {{/*          <div class="form-group">*/}}
+            {{/*            <label for="room_id">Room ID:</label>*/}}
+            {{/*              {{with .Form.Errors.Get "room_id"}}*/}}
+            {{/*                <label for="room_id" class="text-danger">*{{.}}</label>*/}}
+            {{/*              {{end}}*/}}
+            {{/*            <input class="form-control {{with .Form.Errors.Get "room_id"}}*/}}
+            {{/*                   is-invalid*/}}
+            {{/*                   {{end}}" id="room_id"*/}}
+            {{/*                   autocomplete="off"*/}}
+            {{/*                   name='room_id' value="{{$res.RoomID}}" required>*/}}
+            {{/*          </div>*/}}
 
           <hr>
           <input type="submit" class="btn btn-primary" value="Make Reservation">
