--- a/templates/base.layout.tmpl
+++ b/templates/base.layout.tmpl
@@ -45,7 +45,7 @@
           </div>
         </li>
         <li class="nav-item">
-          <a class="nav-link" href="/reservation">Book Now</a>
+          <a class="nav-link" href="/search-availability">Book Now</a>
         </li>
         <li class="nav-item">
           <a class="nav-link" href="/contact">Contact</a>
