--- a/templates/base.layout.tmpl
+++ b/templates/base.layout.tmpl
@@ -50,6 +50,13 @@
         <li class="nav-item">
           <a class="nav-link" href="/contact">Contact</a>
         </li>
+        <li class="nav-item">
+            {{if eq .IsAuthenticated 1}}
+              <a class="nav-link" href="/user/logout">Log Out</a>
+            {{else}}
+              <a class="nav-link" href="/user/login">Login</a>
+            {{end}}
+        </li>
 
       </ul>
     </div>
@@ -203,9 +210,9 @@
 
       async function custom(c) {
         const {
-                icon = "",
-                msg   = "",
-                title = "",
+                icon              = "",
+                msg               = "",
+                title             = "",
                 showConfirmButton = true
               } = c;
 
