update reservation and db functions

--- a/templates/admin.layout.tmpl
+++ b/templates/admin.layout.tmpl
@@ -140,7 +140,21 @@
     <!-- Custom js for this page-->
     <script src="/static/admin/js/dashboard.js"></script>
     <!-- End custom js for this page-->
+    <script src="/static/js/app.js"></script>
+    <script>
+        {{with .Error}}
+        notify("{{.}}", "error")
+        {{end}}
 
+        {{with .Flash}}
+        notify("{{.}}", "success")
+        {{end}}
+
+        {{with .Warning}}
+        notify("{{.}}", "warning")
+        {{end}}
+
+    </script>
     {{block "js" . }}
 
     {{end}}
