--- a/templates/admin-reservation.page.tmpl
+++ b/templates/admin-reservation.page.tmpl
@@ -2,8 +2,8 @@
 
 
 {{define "page-title"}}
-  {{$res := index .Data "reservation"}}
-  Reservation for {{$res.FirstName}} {{$res.LastName}}
+    {{$res := index .Data "reservation"}}
+    Reservation for {{$res.FirstName}} {{$res.LastName}}
 {{end}}
 
 {{define "content"}}
@@ -11,74 +11,121 @@
     {{$src := index .StringMap "src"}}
 
     <div class="col-md-12">
-    <h4>Details:</h4>
+      <h4>Details:</h4>
 
-    Arrival: <strong>{{humanizeDate $res.StartDate}}</strong><br>
-    Departure: <strong>{{humanizeDate $res.EndDate}}</strong><br>
-    Room: <strong>{{$res.Room.RoomName}}</strong><br>
+      Arrival: <strong>{{humanizeDate $res.StartDate}}</strong><br>
+      Departure: <strong>{{humanizeDate $res.EndDate}}</strong><br>
+      Room: <strong>{{$res.Room.RoomName}}</strong><br>
 
-    <form
-            method="post"
-            action="/admin/reservations/{{$src}}/{{$res.ID}}"
-            novalidate
-    >
-      <input type="hidden" name="csrf_token" value="{{.CSRFToken}}">
+      <form
+              method="post"
+              action="/admin/reservations/{{$src}}/{{$res.ID}}"
+              novalidate
+      >
+        <input type="hidden" name="csrf_token" value="{{.CSRFToken}}">
 
-      <div class="form-group mt-3">
-        <label for="first_name">First Name:</label>
-          {{with .Form.Errors.Get "first_name"}}
-            <label for="first_name" class="text-danger">*{{.}}</label>
-          {{end}}
-        <input class="form-control
+        <div class="form-group mt-3">
+          <label for="first_name">First Name:</label>
+            {{with .Form.Errors.Get "first_name"}}
+              <label for="first_name" class="text-danger">*{{.}}</label>
+            {{end}}
+          <input class="form-control
                    {{with .Form.Errors.Get "first_name"}}
                    is-invalid
                    {{end}}"
-               id="first_name" autocomplete="off" type='text'
-               name='first_name' value="{{$res.FirstName}}" required>
-      </div>
+                 id="first_name" autocomplete="off" type='text'
+                 name='first_name' value="{{$res.FirstName}}" required>
+        </div>
 
-      <div class="form-group">
-        <label for="last_name">Last Name:</label>
-          {{with .Form.Errors.Get "last_name"}}
-            <label for="first_name" class="text-danger">*{{.}}</label>
-          {{end}}
-        <input class="form-control {{with .Form.Errors.Get "last_name"}}
+        <div class="form-group">
+          <label for="last_name">Last Name:</label>
+            {{with .Form.Errors.Get "last_name"}}
+              <label for="first_name" class="text-danger">*{{.}}</label>
+            {{end}}
+          <input class="form-control {{with .Form.Errors.Get "last_name"}}
                    is-invalid
                    {{end}}"
-               id="last_name" autocomplete="off" type='text'
-               name='last_name' value="{{$res.LastName}}" required>
-      </div>
+                 id="last_name" autocomplete="off" type='text'
+                 name='last_name' value="{{$res.LastName}}" required>
+        </div>
 
-      <div class="form-group">
-        <label for="email">Email:</label>
-          {{with .Form.Errors.Get "email"}}
-            <label for="first_name" class="text-danger">*{{.}}</label>
-          {{end}}
-        <input class="form-control {{with .Form.Errors.Get "email"}}
+        <div class="form-group">
+          <label for="email">Email:</label>
+            {{with .Form.Errors.Get "email"}}
+              <label for="first_name" class="text-danger">*{{.}}</label>
+            {{end}}
+          <input class="form-control {{with .Form.Errors.Get "email"}}
                    is-invalid
                    {{end}}"
-               id="email"
-               autocomplete="off" type='email'
-               name='email' value="{{$res.Email}}" required>
-      </div>
+                 id="email"
+                 autocomplete="off" type='email'
+                 name='email' value="{{$res.Email}}" required>
+        </div>
 
-      <div class="form-group">
-        <label for="phone">Phone:</label>
-          {{with .Form.Errors.Get "phone"}}
-            <label for="first_name" class="text-danger">*{{.}}</label>
-          {{end}}
-        <input class="form-control {{with .Form.Errors.Get "phone"}}
+        <div class="form-group">
+          <label for="phone">Phone:</label>
+            {{with .Form.Errors.Get "phone"}}
+              <label for="first_name" class="text-danger">*{{.}}</label>
+            {{end}}
+          <input class="form-control {{with .Form.Errors.Get "phone"}}
                    is-invalid
                    {{end}}" id="phone"
-               autocomplete="off" type='tel'
-               name='phone' value="{{$res.Phone}}" required>
-      </div>
-      <hr>
-      <input type="submit" class="btn btn-primary" value="Update Reservation">
-      <a href="/admin/reservations-{{$src}}" class="btn btn-warning">Cancel</a>
-    </form>
-  </div>
+                 autocomplete="off" type='tel'
+                 name='phone' value="{{$res.Phone}}" required>
+        </div>
+        <hr>
+        <input type="submit" class="btn btn-primary" value="Update Reservation">
+        <a href="/admin/reservations-{{$src}}" class="btn btn-warning">Cancel</a>
+          {{if eq $res.Processed 0}}
+            <button class="btn btn-info" id="process-btn">Mark Processed</button>
+          {{end}}
+        <button class="btn btn-danger float-end" id="remove-btn">Remove Reservation</button>
+      </form>
+    </div>
 {{end}}
 
 {{define "js"}}
+    {{$src := index .StringMap "src"}}
+    {{$res := index .Data "reservation"}}
+
+    <script>
+      function processRes(resId, src) {
+        attention.custom({
+          icon: "warning",
+          msg: "Are You Sure?",
+          callback: (result) => {
+            if (result !== false) {
+              window.location.href = `/admin/process-reservation/${src}/${resId}`;
+            }
+          }
+        })
+      }
+
+      function removeRes(resId, src){
+        attention.custom({
+          icon: "warning",
+          msg: "Are You Sure To Remove?",
+          callback: (result) => {
+            if (result !== false) {
+              window.location.href = `/admin/remove-reservation/${src}/${resId}`;
+            }
+          }
+        })
+      }
+      processBtn = document.getElementById("process-btn")
+      if (processBtn) {
+        processBtn.addEventListener("click", (e) => {
+          e.preventDefault();
+          processRes({{$res.ID}}, "{{$src}}");
+        })
+      }
+      deleteBtn = document.getElementById("remove-btn")
+      if (deleteBtn) {
+        deleteBtn.addEventListener("click", (e) => {
+          e.preventDefault();
+          removeRes({{$res.ID}}, "{{$src}}");
+        })
+      }
+
+    </script>
 {{end}}
