--- a/templates/admin-reservations-calendar.page.tmpl
+++ b/templates/admin-reservations-calendar.page.tmpl
@@ -1,11 +1,89 @@
 {{template "admin" .}}
 
 {{define "page-title"}}
-  Reservations Calendar
+  Reservation Calendar
 {{end}}
 
 {{define "content"}}
-  <div class="col-md-12">
-    Dashboard content
-  </div>
+    {{$now := index .Data "now"}}
+    {{$rooms := index .Data "rooms"}}
+    {{$dim := index .IntMap "days_in_month"}}
+    {{$curMonth := index .StringMap "this_month"}}
+    {{$curMonthYear := index .StringMap "this_month_year"}}
+
+    <div class="col-md-12">
+      <div class="text-center">
+        <h3>
+            {{formatDate $now "January"}} {{formatDate $now "2006"}}
+        </h3>
+      </div>
+
+      <div class="float-left">
+        <a href="/admin/reservations-calendar?y={{index .StringMap "prev_month_year"}}&m={{index .StringMap "prev_month"}}"
+           class="btn btn-small btn-outline-secondary">
+          &lt;&lt;
+        </a>
+      </div>
+      <div class="float-right">
+        <a href="/admin/reservations-calendar?y={{index .StringMap "next_month_year"}}&m={{index .StringMap "next_month"}}"
+           class="btn btn-small btn-outline-secondary">
+          &gt;&gt;
+        </a>
+      </div>
+      <div class="clearfix"></div>
+
+      <form action="/admin/reservations-calendar" method="post">
+        <input type="hidden" name="csrf_token" value="{{.CSRFToken}}" />
+        {{range $rooms}}
+            {{$roomId := .ID}}
+            {{$blocks := index $.Data (printf "block_map_%d" .ID)}}
+            {{$reservations := index $.Data (printf "reservation_map_%d" .ID)}}
+
+            <div class="mt-5">
+              <h4>{{.RoomName}}</h4>
+
+              <div class="table-responsive bg-secondary">
+                <table class="table table-bordered table-sm">
+                  <tr class="table-dark">
+                      {{range $index := iterate $dim}}
+                        <td class="text-center">
+                            {{$index}}
+                        </td>
+                      {{end}}
+                  </tr>
+                  <tr>
+                      {{range $index := iterate $dim}}
+                          {{$dts := (printf "%s-%s-%d" $curMonthYear $curMonth $index)}}
+                          <td class="text-center bg-light">
+                              {{if gt (index $reservations $dts) 0}}
+                                <a href="/admin/reservations/cal/{{index $reservations $dts}}">
+                                  <span class="text-danger"><strong>R</strong></span>
+                                </a>
+                              {{else}}
+                                <input type="checkbox"
+                                        {{if gt (index $blocks $dts) 0}}
+                                          checked
+                                          name="remove_block_{{$roomId}}_{{$dts}}"
+                                          value="{{index $blocks $dts}}"
+                                        {{else}}
+                                          name="add_block_{{$roomId}}_{{$dts}}"
+                                        {{end}}
+                                />
+                              {{end}}
+                          </td>
+                      {{end}}
+                  </tr>
+                </table>
+              </div>
+            </div>
+        {{end}}
+        <hr>
+        <input type="submit" class="btn btn-primary" value="Save Changes" />
+      </form>
+
+    </div>
+{{end}}
+
+{{define "js"}}
+
 {{end}}
